--- a/app/code/Codazon/AjaxCartPro/view/frontend/templates/cart/ajax_sidebar.phtml
+++ b/app/code/Codazon/AjaxCartPro/view/frontend/templates/cart/ajax_sidebar.phtml
@@ -23,14 +23,14 @@
 							id="footer-cart-btn-checkout"
 							type="button"
 							class="action primary checkout"
-							data-bind="attr: {title: $t('Go to Checkout')}">
-						<?php echo __('Go to Checkout') ?>
+							data-bind="attr: {title: $t('Proceed to Checkout')}">
+						<?php echo __('Proceed to Checkout') ?>
 					</button>
 					<div data-bind="html: cartSidebar().extra_actions"></div>
 				</div>
 			</div>
 			<!-- /ko -->
-			
+
 		</div>
     </div>
 </div>
