--- a/app/design/frontend/Codazon/fastest/fashion/Codazon_AjaxCartPro/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Codazon_AjaxCartPro/web/css/source/_module.less
@@ -91,7 +91,7 @@
 			top: 10px;
 			right: 5px;
 			//z-index: 100;
-			background: #fc7070;
+			background: #FBB500;
 			color: #fff;
 			display: block;
 			border-radius: 100%;
@@ -205,7 +205,7 @@
 	}
 	.summary-content{
 		font-size:14px;
-		.price{ color:#fc7070}
+		.price{ color:#155DA4}
 	}
 }
 .cart-footer .footer-cart-actions {
@@ -215,7 +215,7 @@
     min-height: 85px;
 	.action.primary {
 		&:before{
-			display: inline-block;
+			display: none;
 			font-family: FontAwesome;
 			font-style: normal;
 			font-weight: normal;
