--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/_cart.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/_cart.less
@@ -79,6 +79,7 @@
                         height: 40px;
                         border-radius: 0 4px 4px 0;
                         line-height: 20px;
+                        padding: 7px 15px;
                     }
                 }
             }
