--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/_actions-toolbar.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/_actions-toolbar.less
@@ -71,3 +71,17 @@
         }
     }
 }
+
+
+//
+//  Mobile @screen__m
+//  ---------------------------------------------
+
+.media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__m) {
+    .actions-toolbar {
+        > .primary {
+            margin-left: 16px;
+            margin-right: 16px;
+        }
+    }
+}
