--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/_breadcrumbs.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/_breadcrumbs.less
@@ -46,6 +46,8 @@
         }
     }
     .page-title-wrapper {
-        display: none;
+        #page-title-heading {
+            display: none;
+        }
     }
 }
