--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/_buttons.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/_buttons.less
@@ -57,6 +57,11 @@ a.action.primary {
 	.lib-css(font, @btn_primary_font);
 	vertical-align:top;
 	margin-bottom:5px;
+    font-size: 14px;
+    line-height: 16px;
+    padding: 12px 39.5px;
+    border-radius: 4px;
+    border: none;
 }
 
 }
