--- a/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_blocksidebar.less
+++ b/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_blocksidebar.less
@@ -83,6 +83,9 @@
 					vertical-align:top;
 				}
 			}
+            .block-collapsible-nav-title {
+                display: none;
+            }
 			.block-content,
 			&.filter .content{
 				//padding:15px 20px;
