--- a/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_homestore.less
@@ -1073,8 +1073,8 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 	.price{color:@main_text !important;}
 }
 .cart-footer .cart-qty{
-	background:#2962ff !important;
-	border-color:#2962ff !important;
+	background:#155DA4 !important;
+	border-color:#155DA4 !important;
 }
 #back-top a{
 	background:#ffffff !important;
@@ -1218,8 +1218,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 		}
 	}
 	.block-collapsible-nav .content{
-		padding:15px 20px !important;
-		.lib-css(border,1px solid @main_border);
+        padding: 16px 20px 24px;
 		border-top:0;
 	}
 }
