--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_Checkout/web/css/source/module/_cart.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_Checkout/web/css/source/module/_cart.less
@@ -118,6 +118,8 @@
                 margin-top: 0;
                 > .primary {
                     text-align: left;
+                    margin-left: 0;
+                    margin-right: 0;
                     .action.primary {
                         &:extend(.abs-revert-to-action-secondary all);
                         margin-right: 0;
@@ -125,6 +127,7 @@
                         height: 40px;
                         border-radius: 0 4px 4px 0;
                         line-height: 20px;
+                        padding: 7px 15px;
                     }
                 }
             }
