--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_header.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_header.less
@@ -551,6 +551,12 @@
             }
         }
         .header.links {
+            .log-in.link {
+                display: block !important;
+            }
+            .authorization-link.log-out {
+                display: none;
+            }
             position: absolute;
             right: 47px;
             top: 5px;
@@ -707,6 +713,12 @@
             }
         }
         .header.links {
+            .log-in.link {
+                display: block !important;
+            }
+            .authorization-link.log-out {
+                display: none;
+            }
             position: absolute;
             right: 47px;
             top: 5px;
