--- a/app/code/Ecomteck/AdvancedContact/view/frontend/templates/form.phtml
+++ b/app/code/Ecomteck/AdvancedContact/view/frontend/templates/form.phtml
@@ -23,6 +23,10 @@
 
 <?php if(count($fields)>0): ?>
 <style>
+    .page-title-wrapper .page-title {
+        padding: 24px 16px;
+        margin: 0;
+    }
     .page-layout-1column .columns {
         box-shadow: none;
         border-radius: 4px;
