--- a/app/design/frontend/Codazon/fastest/hightech/Magento_Checkout/templates/cart/minicart.phtml
+++ b/app/design/frontend/Codazon/fastest/hightech/Magento_Checkout/templates/cart/minicart.phtml
@@ -12,11 +12,11 @@
 <div data-block="minicart" class="minicart-wrapper">
     <a class="action showcart" href="<?php /* @escapeNotVerified */ echo $block->getShoppingCartUrl(); ?>"
        data-bind="scope: 'minicart_content'">
-        <span class="text"><?php /* @escapeNotVerified */ echo __('My Cart'); ?></span>        
-        <span class="price-label" data-bind="html: getCartParam('subtotal')"><!-- ko text: getCartParam('subtotal') --><!-- /ko --></span>        
+        <span class="text"><?php /* @escapeNotVerified */ echo __('My Cart'); ?></span>
+        <span class="price-label" data-bind="html: getCartParam('subtotal')"><!-- ko text: getCartParam('subtotal') --><!-- /ko --></span>
         <!-- ko ifnot: getCartParam('subtotal') -->
-        <span class="price-label">        
-                <!-- ko i18n: '0.00 ' --><!-- /ko -->        
+        <span class="price-label">
+                <!-- ko i18n: '0.00 ' --><!-- /ko -->
         </span>
             <!-- /ko -->
         <span class="counter qty empty"
@@ -27,7 +27,7 @@
             <!-- /ko -->
             <!-- ko if: getCartParam('summary_count') -->
             	<!-- ko text: getCartParam('summary_count') --><!-- /ko -->
-            <!-- /ko -->            	
+            <!-- /ko -->
             </span>
             <span class="counter-label">
             <!-- ko if: getCartParam('summary_count') -->
@@ -67,6 +67,22 @@
             "Magento_Ui/js/block-loader": "<?php /* @escapeNotVerified */ echo $block->getViewFileUrl('images/loader-1.gif'); ?>"
         }
     }
+    </script>
+    <script type="text/javascript">
+        require(['jquery'],function($){
+            $(document).ready(function() {
+                $(".minicart-id-qty-minus").click(function () {
+                    console.log(111);
+                    $(this).siblings('.cart-item-qty').val(parseInt($(this).siblings('.cart-item-qty').val()) - 1);
+                    $(this).siblings('.update-cart-item').trigger('click');
+                })
+                $(".minicart-id-qty-plus").click(function () {
+                    console.log(222);
+                    $(this).siblings('.cart-item-qty').val(parseInt($(this).siblings('.cart-item-qty').val()) + 1);
+                    $(this).siblings('.update-cart-item').trigger('click');
+                })
+            });
+        });
     </script>
 </div>
 
