--- a/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_header.less
+++ b/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_header.less
@@ -109,6 +109,32 @@
                 margin-right: 0 !important;
                 margin-bottom: 0 !important;
             }
+            .authorization-link.log-out {
+                display: none;
+            }
+            .my-account {
+                position: relative;
+                text-transform: none;
+                display: inline-block;
+                font-size: 16px;
+                line-height: 19px;
+                color: #fff;
+                padding-top: 3px !important;
+                &:before {
+                    display: inline-block;
+                    font-family: icomoon;
+                    font-style: normal;
+                    font-weight: normal;
+                    line-height: 1;
+                    -webkit-font-smoothing: antialiased;
+                    -moz-osx-font-smoothing: grayscale;
+                    content: "\e914";
+                    font-size: 24px;
+                    margin-right: 10px;
+                    position: relative;
+                    top: 4px;
+                }
+            }
 		}
 		//My Account
 		.authorization-link.switcher{
@@ -122,7 +148,7 @@
 
 		//Cart
 		.minicart-wrapper{
-			margin-left:36px;
+			margin-left:28px;
 			.rtl-layout &{
 				margin-left:0;
 				margin-right:@indent__s;
