--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_Customer/layout/default.xml
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_Customer/layout/default.xml
@@ -8,11 +8,14 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceBlock name="header.links">
-            <block class="Magento\Framework\View\Element\Html\Link" name="add-new-header-link">
-                <arguments>
-                    <argument name="label" xsi:type="string" translate="true">Sign In</argument>
-                    <argument name="path" xsi:type="string" translate="true">customer/account/login</argument>
-                </arguments>
+            <block class="Magento\Customer\Block\Account\Customer" name="customer" template="account/customer.phtml" before="authorization-link-login" />
+            <block class="Magento\Customer\Block\Account\AuthorizationLink" name="authorization-link-login" template="account/link/authorization.phtml" before="register-link" >
+                <block class="Codazon\ThemeOptions\Block\Loginmini" template="Magento_Customer::form/login.mini.phtml" name="customer_form_login_mini">
+                    <container name="form.additional.social_login" as="form_additional_social_login" />
+                    <container name="form.additional.persistent" as="form_additional_info">
+                        <block class="Magento\Persistent\Block\Form\Remember" name="persistent.remember.me.mini" template="Magento_Persistent::remember_me.phtml" before="-"/>
+                    </container>
+                </block>
             </block>
         </referenceBlock>
 
@@ -30,12 +33,13 @@
 
         <referenceBlock name="my-account-link">
         	<arguments>
-                    <argument name="class" xsi:type="string" translate="false">my-account</argument>
+                <argument name="label" xsi:type="string" translate="true">Account</argument>
+                <argument name="class" xsi:type="string" translate="false">my-account</argument>
             </arguments>
         </referenceBlock>
         <referenceBlock name="register-link">
         	<arguments>
-                    <argument name="class" xsi:type="string" translate="false">register-link</argument>
+                <argument name="class" xsi:type="string" translate="false">register-link</argument>
             </arguments>
         </referenceBlock>
     </body>
