--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_homestore.less
@@ -994,16 +994,16 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 	.price{color:@main_text !important;}
 }
 .cart-footer .cart-qty{
-	background:#2962ff !important;
-	border-color:#2962ff !important;
+	background:#155DA4 !important;
+	border-color:#155DA4 !important;
 }
 #back-top a{
-	background:#2962ff !important;
-	border-color:#2962ff !important;
+	background:#155DA4 !important;
+	border-color:#155DA4 !important;
 	&:hover{
 		background:#ffffff !important;
-		color:#2962ff !important;
-		border-color:#2962ff !important;
+		color:#155DA4 !important;
+		border-color:#155DA4 !important;
 	}
 }
 //Category
